# crails

./: .gitignore  CMakeLists.txt  COOKBOOK.md  README.md  build_inline_templates.sh  buildfile  crails.kdev4  doc-controller.md  doc-getting-started.md  doc-models-mongo.md  doc-view.md  manifest  repositories.manifest
Boots/: CMakeLists.txt  README  manual
Boots/exemple/client/: main.cpp
Boots/exemple/server/: main.cpp
Boots/exemple/shared/: selectthread.cpp  selectthread.hpp
Boots/include/Boots/Network/: buffer.hpp  network.hpp  select.hpp  server.hpp  smtp.hpp
Boots/include/Boots/Sync/: list.hpp  observatory.hpp  observatory_poly.hpp  semaphore.hpp
Boots/include/Boots/System/: dynamic_library.hpp
Boots/include/Boots/Utils/: algorithm.hpp  application.hpp  cl_options.hpp  datatree.hpp  directory.hpp  dynstruct.hpp  flyweight.hpp  helpers.hpp  json.hpp  serializer.hpp  shell.hpp  singleton.hpp  smart_pointer.hpp  state_runner.hpp  test.hpp
Boots/include/Network/: serializer.hpp  socket.hpp
Boots/include/Sync/: functorthread.hpp  list.hpp  mutex.hpp  observatory_network.hpp  semaphore.hpp  thread.hpp
Boots/include/System/: posix_signals.hpp  process.hpp
Boots/include/Utils/: datatree.hpp  datetime.hpp  dynstruct.hpp  exception.hpp  flyweight.hpp  helpers.hpp  regex.hpp  serializer.hpp  singleton.hpp  smart_pointer.hpp  string.hpp  timer.hpp
Boots/src/Network/: exception.cpp  network.cpp  select.cpp  serializer.cpp  smtp.cpp
Boots/src/Sync/: functorthread.cpp  mutex.cpp  observatory_network.cpp  observatory_poly.cpp  semaphore.cpp  thread.cpp
Boots/src/System/: dynamic_library.cpp  posix_signals.cpp  process.cpp
Boots/src/Utils/: application.cpp  backtrace.cpp  cl_options.cpp  data.cpp  datetime.cpp  directory.cpp  json.cpp  regex.cpp  serializer.cpp  shell.cpp  string.cpp  test.cpp  timer.cpp
Boots/testing/: application.cpp  flyweight.cpp  functor_thread.cpp  main.cpp  semaphore.cpp  singleton.cpp  state_machine.cpp  test_data.cpp  test_datetime.cpp  test_directory.cpp  test_json.cpp  test_observatory.cpp  test_serializer.cpp
modules/attachment/: CMakeLists.txt
modules/attachment/app/config/: attachment.cpp
modules/attachment/crails/: attachment.hpp
modules/attachment/src/: attachment.cpp
modules/cache/: CMakeLists.txt
modules/cache/app/config/: memcached.cpp
modules/cache/crails/: memcached.hpp
modules/cache/scripts/lib/: docker_cache_plugin.rb
modules/cache/src/: memcached.cpp
modules/crud/: CMakeLists.txt
modules/crud/crails/crud/: belongs_to_controller.hpp  controller.hpp  paginator.hpp
modules/crud/src/: paginator.cpp
modules/docker/: CMakeLists.txt
modules/docker/app/docker/: build  build.erb  deploy  gitignore  package.erb  shell  shell.erb
modules/docker/app/docker-dependencies/: boost.json  cppnetlib.json  odb.json
modules/docker/scripts/lib/: dockerfile.rb
modules/front/: CMakeLists.txt
modules/front/app/front/: CMakeLists.txt.erb  application.hpp  application_controller.hpp  application_layout.hpp  main.cpp  router.cpp  router.hpp
modules/front/backend_src/: archive_parser.cpp  archive_renderer.cpp
modules/front/crails/: archive.hpp  raise.hpp
modules/front/crails/front/: ajax.hpp  anchorable_element.hpp  append_semantics.hpp  archive.hpp  bindable.hpp  comment_element.hpp  cookies.hpp  custom_element.hpp  datatree.hpp  document.hpp  element.hpp  events.hpp  exception.hpp  globals.hpp  http.hpp  local_storage.hpp  modal.hpp  object.hpp  promise.hpp  repeater.hpp  router.hpp  router_base.hpp  select.hpp  signal.hpp  signal_promise.hpp  slot_element.hpp  table.hpp  template_element.hpp  window.hpp
modules/front/scripts/cppgen/: archive_generator.rb  data_with_front_generator.rb  edit_with_front_generator.rb  front_generator.rb
modules/front/scripts/guard/: crails-cheerp-html.rb  crails-cheerp.rb
modules/front/scripts/lib/: docker_front_plugin.rb
modules/front/src/: archive.cpp  exception.cpp
modules/front/src/front/: ajax.cpp  bindable.cpp  cheerp_parse_cookie_values.cpp  comment_element.cpp  cookies.cpp  datatree.cpp  document.cpp  element.cpp  globals.cpp  http.cpp  local_storage.cpp  modal.cpp  object.cpp  promise.cpp  router.cpp  window.cpp
modules/front/src/shared/: archive.cpp
modules/html/: CMakeLists.txt
modules/html/app/lib/: exception.ecpp
modules/html/crails/: html_template.hpp
modules/html/src/: html_renderer.cpp  html_template.cpp
modules/image/: CMakeLists.txt
modules/image/crails/: image.hpp
modules/image/src/: image.cpp
modules/json/: CMakeLists.txt
modules/json/crails/: json_template.hpp
modules/json/src/: json_renderer.cpp  json_template.cpp
modules/mail/: CMakeLists.txt
modules/mail/crails/: mail_servers.hpp  mailer.hpp  smtp.hpp
modules/mail/src/: mail_servers.cpp  mailer.cpp  smtp.cpp
modules/metarecord/: CMakeLists.txt
modules/models/: CMakeLists.txt
modules/mongodb/: CMakeLists.txt
modules/mongodb/crails/: mongodb.hpp
modules/mongodb/src/: collection.cpp  criteria.cpp  database.cpp  model.cpp  mongodb.cpp
modules/odb/: CMakeLists.txt
modules/odb/src/: connection.cpp  controller.cpp  create_pgsql_database.cpp  database.cpp  database_settings.cpp  migration.cpp  transaction.cpp
modules/proxy/: CMakeLists.txt
modules/proxy/src/: proxy.cpp  rule.cpp
modules/selenium/: CMakeLists.txt
modules/selenium/src/: background_server.cpp  selenium_expectation.cpp  selenium_server.cpp
modules/sentry/: CMakeLists.txt
modules/sentry/crails/: sentry.hpp
modules/sentry/src/: sentry.cpp
modules/sidekic/: CMakeLists.txt
modules/sidekic/crails/: sidekic.hpp
modules/sidekic/src/: sidekic.cpp
modules/signin/: CMakeLists.txt
modules/signin/src/: model.cpp
modules/sql/: CMakeLists.txt
modules/sql/src/: criteria.cpp  database.cpp  model.cpp  type_mapper.cpp
modules/sync/: CMakeLists.txt
modules/sync/src/: client.cpp  sync_connection.cpp  task.cpp  transaction.cpp
modules/xmlrpc/: CMakeLists.txt
modules/xmlrpc/src/: client.cpp  controller.cpp  variable.cpp
scripts/bite/: CMakeLists.txt
scripts/bite/public/: 404.html
(+655 files in other folders)
