cmake_minimum_required(VERSION 3.0)

project(crails-front)

include_directories(.)

file(GLOB crails_front            src/*.cpp)
file(GLOB crails_front_js         src/*.cpp ../../src/http.cpp ../../src/utils/string_semantics.cpp ../../src/utils/string_split.cpp)
file(GLOB crails_back             backend_src/*.cpp)
file(GLOB guard_front_plugins     scripts/guard/*.rb)
file(GLOB cppgen_front_plugins    scripts/cppgen/*.rb)
file(GLOB scripts_front_templates scripts/guard/templates/*.erb)
file(GLOB crails_cheerp_html      scripts/guard/crails-cheerp-html/*.rb)
file(GLOB scripts_front_module    scripts/modules/front/*.rb)
file(GLOB lib_scripts             scripts/lib/*.rb)
file(GLOB_RECURSE docker_template app/docker/*)
file(GLOB_RECURSE front_templates  app/front/*)

add_library(crails-front${crails-suffix} SHARED ${crails_front} ${crails_back})

install(DIRECTORY crails                  DESTINATION include)
install(DIRECTORY src/front               DESTINATION share/crails/front)
install(FILES ${crails_front_js}          DESTINATION share/crails/front)
install(FILES ${scripts_front_templates}  DESTINATION share/crails/guard/templates)
install(FILES ${crails_cheerp_html}       DESTINATION share/crails/crails-cheerp-html)
install(FILES ${scripts_front_module}     DESTINATION share/crails/scripts/modules/front)
install(FILES ${lib_scripts}              DESTINATION share/crails/scripts/lib)
install(FILES ${guard_front_plugins}      DESTINATION share/crails/guard)
install(FILES ${cppgen_front_plugins}     DESTINATION share/crails/cppgen)
install(FILES ${docker_template}          DESTINATION share/crails/app_template/docker)
install(FILES ${front_templates}          DESTINATION share/crails/app_template/front)
install(TARGETS crails-front${crails-suffix} LIBRARY DESTINATION lib)
